[tool.poetry]
name = "blockagi"
version = "0.1.0"
description = ""
authors = [
    "Paul Nattapatsiri <paul@blockpipe.io>",
    "Sorawit Suriyakarn <swit@blockpipe.io>",
]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.215"
duckduckgo-search = "^3.8.3"
playwright = "^1.35.0"
readability-lxml = "^0.8.1"
html2text = "^2020.1.16"
url-normalize = "^1.4.3"
fastapi = "^0.98.0"
openai = "^0.27.8"
typer = "^0.9.0"
uvicorn = "^0.22.0"
pip = "^23.1.2"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
